<resources>
    <string name="app_name">TriviaApp</string>
    <string name="delete_quiz">delete quiz</string>
    <string name="take_quiz">Take Quiz</string>
    <string name="add_question">Add question</string>
    <string name="insert_info_for_questions">insert info for questions</string>
    <string name="save">save</string>
    <string name="name">Name</string>

    <string name="button">Button</string>
    <string name="question">question</string>
</resources>
